--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </a>
       </div>
     </div>
-    <!-- <div class="detail-box">
+    <div class="detail-box">
       <div class="col-md-8 col-lg-6 mx-auto">
         <div class="inner_detail-box">
           <h1>
@@ -123,7 +123,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
   </section>
   <!-- end slider section -->
 
