--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Residential Decoration
+                Custom Furniture Design
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
+                Tailored furniture solutions, including tables, chairs, and cabinets crafted to fit your style and space.
               </p>
               <a href="">
                 Read More
@@ -263,10 +263,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Ecommercial Decoration
+                Interior Design Consultation
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
+                Personalized design services, including space planning and 3D renderings, to bring your vision to life.
               </p>
               <a href="">
                 Read More
@@ -281,10 +281,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Office Decoration
+                Wood Installations
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
+                Expert installation of wood paneling, ceilings, and flooring to add warmth and character to any room.
               </p>
               <a href="">
                 Read More
