--- a/service.html
+++ b/service.html
@@ -82,10 +82,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Residential Decoration
+                Custom Furniture Design
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
+                Tailored furniture solutions, including tables, chairs, and cabinets crafted to fit your style and space.
               </p>
               <a href="">
                 Read More
@@ -100,10 +100,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Ecommercial Decoration
+                Interior Design Consultation
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
+                Personalized design services, including space planning and 3D renderings, to bring your vision to life.
               </p>
               <a href="">
                 Read More
@@ -118,11 +118,64 @@
             </div>
             <div class="detail-box">
               <h5>
-                Office Decoration
+                Wood Installations
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
+                Expert installation of wood paneling, ceilings, and flooring to add warmth and character to any room.
               </p>
+              <a href="">
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-md-6 col-lg-4 mx-auto">
+          <div class="box">
+            <div class="img-box">
+              <img src="images/s3.jpg" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+                Bespoke Cabinetry
+              </h5>
+              <p>
+                Customized storage solutions designed to maximize functionality while complementing your interior aesthetics.
+              <a href="">
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 mx-auto">
+          <div class="box">
+            <div class="img-box">
+              <img src="images/s3.jpg" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+                Sustainable Wood Sourcing
+              </h5>
+              <p>
+                Commitment to using responsibly sourced and reclaimed wood, ensuring eco-friendly practices throughout our processes.
+              <a href="">
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 mx-auto">
+          <div class="box">
+            <div class="img-box">
+              <img src="images/s3.jpg" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+                Renovation Services
+              </h5>
+              <p>
+                Full-service renovations with a focus on integrating beautiful wood elements into your existing spaces.
               <a href="">
                 Read More
               </a>
