--- a/about.html
+++ b/about.html
@@ -84,11 +84,26 @@
               </h2>
             </div>
             <p>
-              Craft Pro Wood Interiors is a Dubai-based company dedicated to creating custom wood designs that transform spaces. With a passion for craftsmanship and a commitment to sustainability, our skilled team offers personalized interior design and bespoke furniture solutions tailored to your unique vision. We believe in the beauty of wood and its ability to enhance any environment, blending modern aesthetics with timeless elegance. Discover how we can bring your interior dreams to life!
+              At CRAFT PRO, we specialize in creating bespoke joinery and furniture that combines functionality with aesthetic appeal. With over 20 years of management experience in the UAE, we have a deep understanding of the region’s unique design preferences and craftsmanship standards. Founded in 20000, we have grown into a trusted name in joinery and furniture manufacturing, offering custom solutions for both residential and commercial projects.
             </p>
-            <a href="">
-              Read More
-            </a>
+            <P>
+              Our mission is to deliver top-quality, tailored furniture and joinery solutions that meet the highest standards of craftsmanship, while keeping sustainability at the forefront. We use responsibly sourced materials and collaborate with skilled artisans to ensure each piece is built to last
+            </P>
+            <P>
+              Over the years, our extensive experience managing projects in the UAE has honed our ability to address diverse customer needs, from custom-made furniture to complete fit-out solutions. Whether it’s a unique piece for a luxury home or specialized cabinetry for a commercial space, our attention to detail and customer-centric approach ensures exceptional results.
+            </P>
+            <P>
+              We are proud of our reputation for reliability, innovation, and quality, and we are committed to delivering a seamless, hassle-free experience from design through to installation.
+            </P>
+            <P>
+              At CRAFT PRO, we believe that every space deserves to be beautifully crafted. Let us help you bring your vision to life with furniture and joinery that’s as functional as it is beautiful.
+            </P>
+            <P>
+              For inquiries or to discuss your project, please CALL US ON +971 554898630.
+            </P>
+            <P>
+              This version emphasizes your extensive management experience in the UAE, demonstrating your leadership and understanding of the local market, which adds credibility and trustworthiness to your company 
+            </P>
           </div>
         </div>
       </div>
