--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@
               </h2>
             </div>
             <p>
-              Craft Pro Wood Interiors is a Dubai-based company dedicated to creating custom wood designs that transform spaces. With a passion for craftsmanship and a commitment to sustainability, our skilled team offers personalized interior design and bespoke furniture solutions tailored to your unique vision. We believe in the beauty of wood and its ability to enhance any environment, blending modern aesthetics with timeless elegance. Discover how we can bring your interior dreams to life!
+              At CRAFT PRO, we specialize in creating bespoke joinery and furniture that combines functionality with aesthetic appeal. With over 20 years of management experience in the UAE, we have a deep understanding of the region’s unique design preferences and craftsmanship standards. Founded in [Year], we have grown into a trusted name in joinery and furniture manufacturing, offering custom solutions for both residential and commercial projects.
             </p>
-            <a href="">
+            <!-- <a href="about.html">About</a> -->
+            <a href="about.html">
               Read More
             </a>
           </div>
