--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
       <div class="row">
         <div class=" col-sm-8 col-md-6 px-0">
           <div class="img-box">
-            <img src="images/g1.jpg" alt="">
-            <a href="images/g1.jpg" data-toggle="lightbox" data-gallery="gallery">
+            <img src="images/gallery/photo_2024-10-16_10-40-32.jpg" alt="">
+            <a href="images/gallery/photo_2024-10-16_10-40-32.jpg" data-toggle="lightbox" data-gallery="gallery">
               <i class="fa fa-picture-o" aria-hidden="true"></i>
             </a>
           </div>
